basic styles and gulp working

--- a/src/stylus/utils/_functions.styl
+++ b/src/stylus/utils/_functions.styl
@@ -22,6 +22,7 @@ flex-center($direction = false, $wrap = false){
 }
 
 absolute($x, $y, $left = true, $top = true){
+    position absolute
     if $left {
         left $x
     } else {
